--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WalletConnect Boilerplate</title>
+    <title>Vanilla Javascript Login Web3</title>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
     <script src="https://github.com/WalletConnect/walletconnect-monorepo/releases/download/1.7.1/web3-provider.min.js"></script>
@@ -9,9 +9,9 @@
   </head>
 
   <body>
-    <button id="btn-login">Moralis WalletConnect Login</button>
+    <button id="btn-login">WalletConnect Login</button>
     <button id="btn-logout">Logout</button>
     <script type="text/javascript" src="./main.js"></script>
-    <span id="walletAddress"> </span>
+    <span id="walletAddress">ok</span>
   </body>
 </html>
