--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <button id="btn-login">WalletConnect Login</button>
     <button id="btn-logout">Logout</button>
     <script type="text/javascript" src="./main.js"></script>
-    <span id="walletAddress">ok</span>
+    <span id="walletAddress"></span>
   </body>
 </html>
