--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
               </button>
               <p
                 class="w-full mt-4 text-sm text-center text-gray-500"
+                id="userName"
+              ></p>
+              <p
+                class="w-full mt-4 text-sm text-center text-gray-500"
                 id="walletAddress"
               ></p>
             </div>
