--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 class="w-full px-3 py-4 font-medium text-white bg-blue-600 rounded-lg"
                 id="btn-login"
               >
-                WalletConnect Login
+                Wallet Login
               </button>
               <button
                 class="w-full px-3 py-4 font-medium text-white bg-blue-600 rounded-lg mt-5"
