--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
 
 
     </section>
- 
+    <div class="relative flex py-5 items-center">
+      <div class="flex-grow border-t border-gray-400"></div>
+      <span class="flex-shrink mx-4 text-gray-400">Content</span>
+      <div class="flex-grow border-t border-gray-400"></div>
+  </div>
   <div
   class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around"
 >
