--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
     <h1 class="text-4xl font-bold text-gray-800">50 M</h1>
     <span class="text-gray-500">Revenue</span>
   </div>
+  <div class="text-center">
+    <h1 class="text-4xl font-bold text-gray-800">50 M</h1>
+    <span class="text-gray-500">Revenue</span>
+  </div>
 </div>
     <script type="text/javascript" src="./main.js"></script>
   </body>
