--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <span class="text-gray-500">Revenue</span>
   </div>
   <div class="text-center">
-    <h1 class="text-4xl font-bold text-gray-800">50 M</h1>
+    <h1 class="text-4xl font-bold text-gray-800 ml-10">50 M</h1>
     <span class="text-gray-500">Revenue</span>
   </div>
 </div>
