--- a/index.html
+++ b/index.html
@@ -67,10 +67,15 @@
     <h1 class="text-4xl font-bold text-gray-800">50 M</h1>
     <span class="text-gray-500">Revenue</span>
   </div>
-  <div class="text-center">
-    <h1 class="text-4xl font-bold text-gray-800 ml-10">50 M</h1>
-    <span class="text-gray-500">Revenue</span>
-  </div>
+
+</div>
+<div
+  class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around"
+>
+<div class="text-center">
+  <h1 class="text-4xl font-bold text-gray-800 ml-10">50 M</h1>
+  <span class="text-gray-500">Revenue</span>
+</div>
 </div>
     <script type="text/javascript" src="./main.js"></script>
   </body>
