--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       <span class="text-gray-500">Revenue</span>
     </div>
     </div>
+    <div
+    class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around"
+  >
+    <img src="https://i.imgur.com/dJeEVcO.png" alt="" />
+    <div class="text-center">
+      <h1 class="text-4xl font-bold text-gray-800">50 M</h1>
+      <span class="text-gray-500">Revenue</span>
+    </div>
+    </div>
   
   </div>
     <section class="w-full px-8 py-16 bg-gray-100 xl:px-8 flex-grow">
