--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body class="flex flex-col h-screen">
     <div
-    class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around"
+    class="bg-white w-1/3 rounded-xl shadow-lg items-center justify-around"
   >
     <img src="https://i.imgur.com/dJeEVcO.png" alt="" />
     <div class="text-center">
