--- a/index.html
+++ b/index.html
@@ -10,26 +10,9 @@
   </head>
 
   <body class="flex flex-col h-screen">
-    <div
-    class="bg-white w-1/3 rounded-xl shadow-lg items-center justify-around"
-  >
-    <img src="https://i.imgur.com/dJeEVcO.png" alt="" />
-    <div class="text-center">
-      <h1 class="text-4xl font-bold text-gray-800">50 M</h1>
-      <span class="text-gray-500">Revenue</span>
+    <div class="flex justify-between p-4 bg-white mt-3 rounded-xl shadow-lg">
     </div>
-    </div>
-    <div
-    class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around"
-  >
-    <img src="https://i.imgur.com/dJeEVcO.png" alt="" />
-    <div class="text-center">
-      <h1 class="text-4xl font-bold text-gray-800">50 M</h1>
-      <span class="text-gray-500">Revenue</span>
-    </div>
-    </div>
-  
-  </div>
+    
     <section class="w-full px-8 py-16 bg-gray-100 xl:px-8 flex-grow">
       <div class="max-w-5xl mx-auto">
         <div class="flex flex-col items-center md:flex-row">
