--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
 
   <body class="flex flex-col h-screen">
     <div class="flex justify-between p-4 bg-white mt-3 rounded-xl shadow-lg">
+      <div class="flex justify-between mt-4 space-x-4 s">
+        <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
+          <img src="https://i.imgur.com/VHc5SJE.png" alt="" />
+          <div class="text-center">
+            <h1 class="text-4xl font-bold text-gray-800">534</h1>
+            <span class="text-gray-500">Coaches</span>
+          </div>
+        </div>
+        <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
+          <img src="https://i.imgur.com/Qnmqkil.png" alt="" />
+          <div class="text-center">
+            <h1 class="text-4xl font-bold text-gray-800">9.7k</h1>
+            <span class="text-gray-500">Kids</span>
+          </div>
+        </div>
+        <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
+          <img src="https://i.imgur.com/dJeEVcO.png" alt="" />
+          <div class="text-center">
+            <h1 class="text-4xl font-bold text-gray-800">50 M</h1>
+            <span class="text-gray-500">Revenue</span>
+          </div>
+        </div>
+      </div>
     </div>
     
     <section class="w-full px-8 py-16 bg-gray-100 xl:px-8 flex-grow">
