--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="css/tailwind.css" />
   </head>
 
-  <body class="flex flex-col h-screen items-center justify-between p-4 bg-white mt-3 rounded-xl shadow-lg">
+  <body class="flex flex-col h-screen items-center shadow-lg">
     <div class="flex justify-between p-4 bg-white mt-3 rounded-xl shadow-lg">
       <div class="flex justify-between mt-4 space-x-4 s">
         <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
+          <i class="far fa-landmark"></i>
           <img src="https://i.imgur.com/VHc5SJE.png" alt="" />
           <div class="text-center">
             <h1 class="text-4xl font-bold text-gray-800">534</h1>
