--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div class="flex justify-between p-4 bg-white mt-3 rounded-xl shadow-lg">
       <div class="flex justify-between mt-4 space-x-4 s">
         <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
-          <i class="far fa-landmark"></i>
-          <img src="https://i.imgur.com/VHc5SJE.png" alt="" />
+          <img src="https://img.icons8.com/external-kmg-design-detailed-outline-kmg-design/50/000000/external-atm-money-kmg-design-detailed-outline-kmg-design.png"/>
           <div class="text-center">
             <h1 class="text-4xl font-bold text-gray-800">534</h1>
             <span class="text-gray-500">Coaches</span>
