--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
           </div>
         </div>
         <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
-          <img src="https://i.imgur.com/Qnmqkil.png" alt="" />
+          <img src="https://img.icons8.com/external-kmg-design-detailed-outline-kmg-design/50/000000/external-atm-money-kmg-design-detailed-outline-kmg-design.png"/>
           <div class="text-center">
             <h1 class="text-4xl font-bold text-gray-800">9.7k</h1>
             <span class="text-gray-500">Kids</span>
           </div>
         </div>
         <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
-          <img src="https://i.imgur.com/dJeEVcO.png" alt="" />
+          <img src="https://img.icons8.com/external-kmg-design-detailed-outline-kmg-design/50/000000/external-atm-money-kmg-design-detailed-outline-kmg-design.png"/>
           <div class="text-center">
             <h1 class="text-4xl font-bold text-gray-800">50 M</h1>
             <span class="text-gray-500">Revenue</span>
