--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body class="flex flex-col h-screen items-center shadow-lg">
-    <div class="flex justify-between p-4 bg-white mt-3 rounded-xl shadow-lg">
+    <div class="flex justify-between bg-white rounded-xl shadow-lg">
       <div class="flex justify-between mt-4 space-x-4 s">
         <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
           <img src="https://img.icons8.com/external-itim2101-blue-itim2101/64/000000/external-bank-financial-itim2101-blue-itim2101-1.png"/>
