--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body class="flex flex-col h-screen items-center shadow-lg">
     <div class="flex justify-between bg-white rounded-xl shadow-lg">
-      <div class="flex justify-between mt-4 space-x-4 s">
+      <div class="flex justify-between space-x-4 s">
         <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
           <img src="https://img.icons8.com/external-itim2101-blue-itim2101/64/000000/external-bank-financial-itim2101-blue-itim2101-1.png"/>
           <div class="text-center">
