--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/tailwind.css" />
   </head>
 
-  <body class="flex flex-col h-screen items-center shadow-lg pb-2">
+  <body class="flex flex-col h-screen items-center shadow-lg mb-20">
     <div class="flex justify-between bg-white rounded-xl shadow-lg">
       <div class="flex justify-between space-x-4 s">
         <div class="bg-white w-1/3 rounded-xl shadow-lg flex items-center justify-around">
