--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/tailwind.css" />
   </head>
 
-  <body class="flex flex-col h-screen items-center shadow-lg mb-20">
-    <section class="flex flex-col h-screen items-center shadow-lg mb-20">
+  <body class="flex flex-col h-screen items-center shadow-lg ">
+    <section class="flex flex-col h-screen items-center shadow-lg ">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-4 ">
           <div class="grid grid-cols-2 gap-4 md:grid-cols-6 py-8">
               <div class="flex items-center justify-center p-6 col-span-1 md:col-span-2 lg:col-span-1">
