--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
   </section>
     
-    <section class="w-full px-8 py-16 bg-gray-100 xl:px-8 flex-grow">
+    <section class="w-full px-8 py-16 bg-gray-100 xl:px-8 flex-grow shadow-lg">
       <div class="max-w-5xl mx-auto">
         <div class="flex flex-col items-center md:flex-row">
           <div class="w-full space-y-5 md:w-3/5 md:pr-16">
@@ -58,13 +58,13 @@
                 Simply Use Your Wallet To Login!
               </h3>
               <button
-                class="w-full px-3 py-4 font-medium text-white bg-blue-600 rounded-lg"
+                class="w-full px-3 py-4 font-medium text-white bg-gray-800 rounded-lg"
                 id="btn-login"
               >
                 Wallet Login
               </button>
               <button
-                class="w-full px-3 py-4 font-medium text-white bg-blue-600 rounded-lg mt-5"
+                class="w-full px-3 py-4 font-medium text-white bg-gray-800 rounded-lg mt-5"
                 id="btn-logout"
               >
                 Logout
