--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 Simply Use Your Wallet To Login!
               </h3>
               <button
-                class="w-full px-3 py-4 font-medium text-white bg-red-300 rounded-lg"
+                class="w-full px-3 py-4 font-medium text-white bg-red rounded-lg"
                 id="btn-login"
               >
                 Wallet Login
