--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                 Simply Use Your Wallet To Login!
               </h3>
               <button
-                class="w-full px-3 py-4 font-medium text-white bg-red rounded-lg"
+                class="w-full px-3 py-4 font-medium text-white bg-red-600 rounded-lg shadow-lg"
                 id="btn-login"
               >
                 Wallet Login
               </button>
               <button
-                class="w-full px-3 py-4 font-medium text-white bg-gray-800 rounded-lg mt-5"
+                class="w-full px-3 py-4 font-medium text-white bg-gray-800 rounded-lg mt-5 shadow-lg"
                 id="btn-logout"
               >
                 Logout
