--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body class="flex flex-col h-screen items-center shadow-lg mb-20">
-    <section class="flex flex-col h-screen items-center shadow-lg mb-3">
+    <section class="flex-col h-screen items-center shadow-lg mb-3">
       <div class="mx-2 px-1">
           <div class="grid grid-cols-2 gap-4 md:grid-cols-6 ">
               <div class="flex items-center justify-center p-6 col-span-1 md:col-span-2 lg:col-span-1">
